Server/k8s/database/database/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backendsofa-db
spec:
  selector:
    app: backendsofa-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
