Server/k8s/database/database/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backendsofa-db-network-policy
spec:
  podSelector:
    matchLabels:
      app: backendsofa-db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backendsofa
      ports:
        - protocol: TCP
          port: 5432
